# cryst-symm

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benches/: benchmark.rs
examples/: analyzer.rs  structure.rs
examples/python/: analyzer.py
rust_examples/: structure.rs
src/: analyzer.rs  data.rs  lib.rs  main.rs  pointgroup.rs  reduce.rs  spacegroup.rs  structure.rs  symmetry.rs  symmop.rs  utils.rs
src/data/: core.rs  mod.rs  pointgroup.rs  spacegroup.rs
