[package]
name = "cryst-symm"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3

[lib]
name = "cryst-symm"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
lazy_static = "1.4.0"
itertools = "0.10.3"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
