[package]
name = "cryst-symm"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[lib]
name = "crystsymm"
crate-type = ["cdylib", "lib"]

[dependencies]
nalgebra = "0.31.3"
lazy_static = "1.4.0"
itertools = "0.10.3"
pyo3 = { version = "0.17.3", features = ["extension-module"] }


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true
